[National Highways] Fixed some spacing issues on mobile

--- a/web/cobrands/highwaysengland/layout.scss
+++ b/web/cobrands/highwaysengland/layout.scss
@@ -75,6 +75,10 @@ p.form-error {
         font-weight: bold;
         color: $white;
     }
+
+    .hero-bg {
+        padding: 5% 1em;
+    }
 }
 
 .site-footer {
